--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,6 +8,7 @@
   --font-primary: "Bringhum";
   --font-secondary: "Unbounded";
   /* 24 40 56 */
+  /* https://bavet.eu/ */
 }
 *,
 *:before,
@@ -213,15 +214,50 @@ body {
 .introduce-sec {
   overflow: hidden;
   padding-top: 10px;
+  height: 100vh;
+}
+.introduce__container {
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  gap: 70px;
+  padding: 24px;
 }
 .introduce__container h1 {
   font-size: 100px;
   line-height: 110px;
   transform: rotate(-8deg);
 }
-/* .introduce__container h1 .line {
+.introduce__container h1 .line {
   line-height: 84px;
-} */
-.banner {
-  height: 10vh;
+}
+.introduce__title {
+  width: 580px;
+  height: 580px;
+  position: relative;
+}
+.introduce__bg {
+  position: absolute;
+  inset: 0;
+}
+.introduce__bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.introduce__right .box-img {
+  /* width: 345px;
+  height: 500px; */
+  width: 100%;
+  height: 100%;
+  mask-image: url("../images/img_bg.svg");
+  mask-size: 100% 100%;
+}
+.introduce__left .box-img {
+  /* width: 345px;
+  height: 500px; */
+}
+.introduce__right img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
