--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -628,6 +628,37 @@ h6,
   overflow-y: scroll;
   pointer-events: auto;
 }
+.minicart-popup-inner {
+  position: relative;
+}
+.minicart-popup-sumbit {
+  position: absolute;
+  bottom: 33px;
+  z-index: 999;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.minicart-popup-sumbit button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
+  height: 66px;
+  background-color: var(--color-secondary);
+  mask-image: url("../images/img_bg_default.svg");
+  mask-size: 100% 100%;
+  background-image: url("../images/img_bg_default.svg");
+  background-size: 100% 100%;
+  color: var(--color-fourth);
+  transition: all 0.2s ease;
+  overflow: hidden;
+  padding-top: 5px;
+}
+.minicart-popup-sumbit:hover button {
+  background-image: url("../images/img_bg_hover.svg");
+  mask-image: url("../images/img_bg_hover.svg");
+  background-color: var(--color-secondary);
+}
 .modal-cart .minicart-popup-wrapper::-webkit-scrollbar {
   display: none;
 }
@@ -645,7 +676,7 @@ h6,
 }
 .minicart-popup-body {
   padding: 20px 28px 20px;
-  height: 550px;
+  height: calc(100% - 100px);
   overflow: scroll;
 }
 .minicart-popup-body::-webkit-scrollbar {
@@ -687,6 +718,7 @@ h6,
   bottom: 0;
   background-color: var(--color-white);
 }
+
 .minicart-popup-footer .minicart-popup-subtotal {
   display: flex;
   justify-content: space-between;
