--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -665,7 +665,7 @@ input[type="number"] {
 .modal-cart .minicart-popup-wrapper {
   width: 465px;
   height: 575px;
-  background-color: var(--color-white);
+  background-color: #f9f9f9;
   mask-image: url("../images/bg_modal.png");
   mask-size: 100% 100%;
   overflow-y: scroll;
